--- a/index.html
+++ b/index.html
@@ -1,24 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>De-Team-Demo-Project</title>
     <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <!--Navbar-->
+
+    <!--Description of Companies Content-->
+
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col col-sm-12 col-md-12 col-lg-4  mt-3">
+          <div class="card" style="width: 18rem">
+            <img src="./images/de-team-sro.jpg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title"><img src="./images/slovakia.svg" alt=""> De Team s.r.o</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Contact</a>
+            </div>
+          </div>
+        </div>
+        <div class="col col-sm-12 col-md-6 col-lg-4 mt-3">
+          <div class="card" style="width: 18rem">
+            <img src="./images/de-team-sro.jpg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title"><img src="./images/slovenia.svg" alt=""> De Team d.o.o</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Contact</a>
+            </div>
+          </div>
+        </div>
+        <div class="col col-sm-12 col-md-6 col-lg-4 mt-3">
+          <div class="card" style="width: 18rem">
+            <img src="./images/de-team-sro.jpg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title"><img src="./images/slovakia.svg" alt=""> De Industriemontage s.r.o</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Contact</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
 
-
-    
-
-
+    <br><br><br><br><br><br><br><br><br><br>
 
     <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
